# hot-sauce-

./: README.md
.github/workflows/: build-plugin.yml
HotSauce-JUCE-Starter/: CMakeLists.txt  README.md
HotSauce-JUCE-Starter/Resources/: TargetProfiles.json
HotSauce-JUCE-Starter/Source/: Analyzer.h  DynamicBand.cpp  DynamicBand.h  EQDesigner.cpp  EQDesigner.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
my-audio-plugin/: .gitignore  CMakeLists.txt  README.md
my-audio-plugin/Builds/: CMakeLists.txt  Makefile
my-audio-plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
my-audio-plugin/Tests/: test_plugin.cpp
